# esp32_camera

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt
main/basis/: main.c
main/communication/: blufi.c  blufi.h  blufi_init.c  blufi_security.c
main/sensors/: get_sensor_data.c  get_sensor_data.h
