idf_component_register(SRCS "basis/main.c" 
                            "communication/blufi.c"
                            "communication/blufi_init.c"
                            "communication/blufi_security.c"
                    INCLUDE_DIRS "basis" 
                                 "communication"
                    )
